I have made some changes to the project that will make our lives easier: 1. I changed the way we use input files by using qt resource files (http://doc.qt.io/qt-5/resources.html) to load input files. Also I added an icon for the software ;). What does this mean? when you build the file or change Sections.txt you don't have to copy sections.txt to the build folder like we were doing before. Qt will do this automagically.
2. Richard and I created an easier api for you to use when you detect collisions:
      Instead of:
          void sectionOff(int boardNum, int section);
          void sectionOn(int boardNum, int section);
      You can now use:
      void collisionEvt(QStringList collisionSections); // new default

The above will (1) turn off the section(s) in the list (2) create a popup letting them know what does section(s) were (3) check user's response and turns the sections back on.
Example:
emit collisionEvt(QStringList() << section.second); OR
emit collisionEvt(QStringList() << currentSection.getNode() << currentSection.getConn1() << currentSection.getConn2());

We also created these:
      void nodeOn(QString node);
      void nodeOff(QString node);
Example:
emit nodeOn(section.getConn2());
Which works like the sectionOff and sectionOn but doesn't require you to convert getNode()/getConnX() results to boardNum and section in order to shut off/ turn on sections -- It will do it for you.

3. Added a printHeader function to trainmonitor that will print formatted messages
example:  printHeader("Done loading sections"); will print  -------------------Done loading sections-------------------

--- a/TSS/tss.qrc
+++ b/TSS/tss.qrc
@@ -1,6 +1,8 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/config">
         <file alias="SectionsInput">Sections.txt</file>
+    </qresource>
+    <qresource prefix="/images">
         <file alias="logo">logo.ico</file>
     </qresource>
 </RCC>
